# organizer

./: .gitignore  .organizer.toml  LICENSE  README.md  organizer.config.reference.toml  pyproject.toml
src/organizer/: app.py
src/organizer/core/: config.py  errors.py  executor.py  models.py  planner.py  rules.py  safety.py  scan.py  shortcut_resolver.py
src/organizer/interfaces/: cli.py  ui_tk.py
tests/: test_placeholder.txt
